[gd_scene load_steps=11 format=3 uid="uid://btycd5gl1t2ii"]

[ext_resource type="PackedScene" uid="uid://b858s7co2xgay" path="res://World/overworld.tscn" id="1_80nbo"]
[ext_resource type="Script" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://c61vpv00601s4" path="res://Battle Scene/Menu Assets/dialogue_box.tscn" id="3_fc0e3"]
[ext_resource type="PackedScene" uid="uid://cnhwtxwawsw7d" path="res://GUI/fade_transition.tscn" id="3_feb5d"]
[ext_resource type="Theme" uid="uid://dmgmv7cyjhksv" path="res://Battle Scene/Menu Assets/Main.tres" id="4_hve3p"]
[ext_resource type="Texture2D" uid="uid://di2chh65q5mjj" path="res://World/Art/Canvas Frame.png" id="5_ryrav"]
[ext_resource type="Texture2D" uid="uid://d2jvi13mbfbko" path="res://World/Art/CardBack.png" id="6_vef74"]
[ext_resource type="Texture2D" uid="uid://dtttkiqp7gqat" path="res://World/Art/CardBack_Pressed-export.png" id="7_hve3p"]
[ext_resource type="Texture2D" uid="uid://dagapu2nyg3ym" path="res://World/Art/CardBack_Hovered-export.png" id="8_mfdv2"]
[ext_resource type="PackedScene" uid="uid://djmqpjs8elmqy" path="res://GUI/FieldMenu/field_menu.tscn" id="9_hve3p"]

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="Overworld" parent="." instance=ExtResource("1_80nbo")]

[node name="CanvasLayer0" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer0"]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("5_ryrav")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer0"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_hve3p")
theme_override_constants/margin_left = 51
theme_override_constants/margin_bottom = 0

[node name="DialogueBox" parent="CanvasLayer0/MarginContainer" instance=ExtResource("3_fc0e3")]
layout_mode = 2
size_flags_vertical = 8

[node name="TextureButton" type="TextureButton" parent="CanvasLayer0"]
offset_left = 13.0
offset_top = 131.0
offset_right = 79.0
offset_bottom = 232.0
rotation = 0.785397
scale = Vector2(0.803213, 0.803213)
texture_normal = ExtResource("6_vef74")
texture_pressed = ExtResource("7_hve3p")
texture_hover = ExtResource("8_mfdv2")

[node name="FieldMenu" parent="CanvasLayer0" instance=ExtResource("9_hve3p")]
visible = false

[node name="BattleHolder" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="FadeTransition" parent="." instance=ExtResource("3_feb5d")]

[connection signal="enemy_encountered" from="Overworld" to="." method="_on_overworld_enemy_encountered"]
[connection signal="transition_entered" from="Overworld" to="." method="_on_overworld_transition_entered"]
